--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -25,7 +25,7 @@
 		<span><a href="/author">Autor</a></span>
 	</nav>
 		<section class="main" id = "s1">
-		<div><%- body %></div>
+		<%- body %>
 		</section>
 		<footer class="main" id="f1">
 			<a href="http://es.wikipedia.org/wiki/Quiz">¿Que es un quiz?</a>
