--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -1,4 +1,9 @@
 <table>
+<form method="get" action="/quizes">
+ Busqueda de preguntas:<p>
+ <input type="text" name="search" value="Escriba aquí"/>
+ <input type="submit" value="Enviar"/>
+ </form>
 <% var i; for (i=0; i < quizes.length; i++) { %>        
     <tr>
       <td><a href="quizes/<%= quizes[i].id %>"><%= quizes[i].pregunta %></a></td>
