--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -28,6 +28,7 @@
 		<span><a href="/">Inicio </a></span>
 		<span><a href="/quizes">Preguntas</a></span>
 		<span><a href="/author">Autor</a></span>
+		<span><a href="/quizes/statistic">Estadísticas</a></span>
 	</nav>
 		<section class="main" id = "s1">
 			<% if (errors.length) { %>
