--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -25,9 +25,9 @@
 		<h2>Quiz:<span> el juego de las preguntas</span></h2>
 	</header>
 	<nav class="main" id="n1" role="navegation">
-		<span><a href="/">Inicio </a></span>
-		<span><a href="/quizes">Preguntas</a></span>
-		<span><a href="/author">Autor</a></span>
+		<span><a href="/">Inicio </a></span><br>
+		<span><a href="/quizes">Preguntas</a></span><br>
+		<span><a href="/author">Autor</a></span><br>
 		<span><a href="/quizes/statistic">Estadísticas</a></span>
 	</nav>
 		<section class="main" id = "s1">
