--- a/public/stylesheets/smartphone.css
+++ b/public/stylesheets/smartphone.css
@@ -6,3 +6,4 @@ h2 span, section h3, label.rem
 body             { font-size: xx-large; }
 input, button    { font-size: x-large; }
 footer           { font-size: large; }
+.quiz_img { float: none; }
