--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -27,6 +27,9 @@
 	<nav class="main" id="n1" role="navegation">
 		<span><a href="/">Inicio </a></span><br>
 		<span><a href="/quizes">Preguntas</a></span><br>
+		<%if(session.user){%>
+		<span><a href="/user/<%=session.user.id%>/quizes">Mis Preguntas</a></span>
+		<%}%><br>
 		<span><a href="/author">Autor</a></span><br>
 		<span><a href="/quizes/statistic">Estadísticas</a></span>
 	</nav>
